refactored and added caching

--- a/src/containers/tag-explorer/tag-explorer.scss
+++ b/src/containers/tag-explorer/tag-explorer.scss
@@ -65,5 +65,10 @@
         }
       }
     }
+    .tag-cloud__container {
+      margin-right: -30px;
+      padding-right: 30px;
+      width: 100%;
+    }
   }
 }
