feature/search history implemented along with a few bug fixes

--- a/client/src/components/tag-cloud/tag-cloud.scss
+++ b/client/src/components/tag-cloud/tag-cloud.scss
@@ -3,10 +3,9 @@
 .tag-cloud {
   @include flex-box(center);
   flex-wrap: wrap;
+  padding-right: 8px;
   &__container {
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
   }
   &__item {
     @include flex-box(center);
