--- a/client/src/containers/app/app.scss
+++ b/client/src/containers/app/app.scss
@@ -25,6 +25,7 @@
     font-size: 22px;
     font-weight: 700;
     text-align: center;
+    width: 100%;
   }
   @media screen and (min-width: $medium-mobile-breakpoint) {
     &__title {
