multiple selection with shift key complete

--- a/client/src/containers/history-viewer/history-viewer.scss
+++ b/client/src/containers/history-viewer/history-viewer.scss
@@ -16,9 +16,8 @@
     padding: $gutter / 2 0;
   }
   &__list {
-    overflow-x: hidden;
-    overflow-y: scroll;
     height: 100%;
+    padding-right: 5px;
     width: 100%;
     &__item {
       &:first-child {
