--- a/client/src/styles/lib/_variables.scss
+++ b/client/src/styles/lib/_variables.scss
@@ -10,6 +10,7 @@ $desktop-top-border-height: $mobile-top-border-height + 10;
 // colours
 $main-dark-color: #182229;
 $main-dark-blue-color: #192950;
+$main-light-blue-color: #809ada;
 $main-green-color: #1DCC96;
 $main-grey-color: #7e7e7e;
 $main-light-blue-color: #B6CDE5;
