--- a/client/src/components/tag-cloud/tag-cloud.scss
+++ b/client/src/components/tag-cloud/tag-cloud.scss
@@ -14,8 +14,9 @@
     margin: 0 5px 5px 0;
     padding: 5px 7px 5px 5px;
     border-radius: 10px;
+    transition: opacity 300ms ease-in;
     &--selected {
-      background: $main-mid-blue-color;
+      background: $main-mid-blue-color !important;
       color: #fff;
     }
     > .material-icons {
@@ -27,22 +28,28 @@
       opacity: 0.01;
       &.tag-cloud__item-enter-active {
         opacity: 1;
-        transition: opacity 300ms ease-in;
       }
     }
     &-leave {
       opacity: 1;
       &.tag-cloud__item-leave-active {
         opacity: 0.01;
-        transition: opacity 300ms ease-in;
       }
+    }
+    &--hovered {
+      background: red;
+      color: #000000;
     }
   }
   @media screen and (min-width: $small-desktop-breakpoint) {
     &__item {
-      &:hover {
-        background: $main-dark-blue-color;
-        color: #fff;
+      //&:hover {
+      //  background: $main-dark-blue-color;
+      //  color: #fff;
+      //}
+      &--hovered {
+        background: red;
+        color: #000000;
       }
       &__text {
         &:hover {
